--- a/PrimeNumbersTableGenerator/PrimeNumbersTableGenerator.csproj
+++ b/PrimeNumbersTableGenerator/PrimeNumbersTableGenerator.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ConsoleTableExt" Version="3.1.9" />
     <PackageReference Include="Extreme.Numerics" Version="8.1.5" />
   </ItemGroup>
 
